--- a/indi_allsky/flask/templates/imageviewer.html
+++ b/indi_allsky/flask/templates/imageviewer.html
@@ -192,20 +192,14 @@ function closeFullscreen() {
 
 <hr>
 
-<div class="row">
-    <div class="col-12 text-center" style="font-size:10px">
-        Use arrow keys, WASD, or VIM keys to cycle images - Hour: Up/Down - Image: Left/Right - x: Exclude
-    </div>
-</div>
-
-<div class="row">
+<div class="row h-75 align-items-center">
     <div class="col-12 text-center">
+        <div style="font-size:10px">
+            Use arrow keys, WASD, or VIM keys to cycle images - Hour: Up/Down - Image: Left/Right - x: Exclude
+        </div>
+
         <img id="image" class="fit">
-    </div>
-</div>
 
-<div class="row">
-    <div class="col-12 text-center">
         <div style="margin-top: 20px;">
             <span id="loop_here"></span>
             <span id="mini_generate_here"></span>
