switch image viewer view to img view

--- a/indi_allsky/flask/templates/view_image.html
+++ b/indi_allsky/flask/templates/view_image.html
@@ -5,15 +5,19 @@
 {% block head %}
 <meta charset="UTF-8">
 <style>
-canvas {
-    width: 100%;
+.fit {
+    max-width: 100%;
+    max-height: 80vh;
+    width: auto;
     height: auto;
+    object-fit: contain;
 }
 </style>
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/clipboard.min.js') }}"></script>
 <script type="text/javascript">
 var img;
 var fullscreen = false;  //initial state
+var camera_id = {{ camera_id }};
 var image_id = {{ image_id }};
 var file_view = "{{ file_view }}";
 var image_url = "{{ image_url }}";
@@ -21,21 +25,23 @@ var image_url = "{{ image_url }}";
 {% endblock %}
 
 {% block content %}
+<div class="container h-100">
+
 <h3>{{ createDate_full }} - {{ timeofday }}</h3>
 
 <hr>
 
-<div class="row">
-    <div class="col-sm-12">
-        <canvas id="canvas"></canvas>
+<div class="row h-75 align-items-center">
+    <div class="col-sm-12 text-center">
+        <img id="image" class="fit">
+
+        <div style="margin-top: 20px;">
+            <span id="permalink"></span>
+            <span id="download"></span>
+        </div>
     </div>
 </div>
 
-<div class="row">
-    <div class="text-center">
-        <span id="permalink"></span>
-        <span id="download"></span>
-    </div>
 </div>
 
 <script>
@@ -43,24 +49,11 @@ var image_url = "{{ image_url }}";
 function showImage(url) {
     console.log('Showing image ' + url);
 
-    var canvas = document.getElementById("canvas");
-    var context = canvas.getContext("2d");
-
     img = new Image();
     img.onload = function() {
-        canvas.setAttribute("width", window.innerWidth);
-        canvas.setAttribute("height", window.innerHeight);
-
-        var hRatio = canvas.width  / this.width;
-        var vRatio = canvas.height / this.height;
-        var ratio  = Math.min ( hRatio, vRatio );
-        var centerShift_x = ( canvas.width - this.width * ratio ) / 2;
-        var centerShift_y = ( canvas.height - this.height * ratio ) / 2;
-
-        //context.imageSmoothingEnabled = false;
-        context.drawImage(this, 0, 0, this.width, this.height,
-            centerShift_x, centerShift_y, this.width * ratio, this.height * ratio);
-
+        $('#image').attr({
+            'src': this.src,
+        });
     };
 
 
@@ -151,7 +144,7 @@ function init() {
 }
 
 $( document ).ready(function() {
-    $('#canvas').on("click", function() {
+    $('#image').on("click", function() {
         goFullscreen(this);
     });
 
