--- a/indi_allsky/flask/templates/watch_video.html
+++ b/indi_allsky/flask/templates/watch_video.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="{{ url_for('indi_allsky.static', filename='js/clipboard.min.js') }}"></script>
 <script type="text/javascript">
 var video_id = {{ video_id }};
+var camera_id = {{ camera_id }};
 var dayDate = "{{ dayDate }}";
 var file_view = "{{ file_view }}";
 </script>
